This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

09-Oct-2002 (Lars Duening)
  - (prolang.y) When processing inherited structs, the code overwrote
       random memory - especially when there weren't any structs to
       process (reported by Bardioc).
  - (port.h) No longer includes <values.h> which has been obsoleted
       by <limits.h> and <float.h>.
  - (config.h, driver.h) Removed the compilation warning when YYDEBUG
       was not defined.

08-Oct-2002 (Lars Duening)
  - (sprintf.c) Printing a quoted array accidentally used the struct-printing
       code (reported by Dafire).
  - (interpret.c) structs are not flattened in apply() or with '...'
       (suggested by Zonk).

08-Oct-2002 (Lars Duening)  (3.3.279)
  - (prolang.y) Gah, forgot to remove a debug output.

08-Oct-2002 (Lars Duening)  (3.3.278)
  - (configure) Forgot to regenerate it.
  - (lex.c, prolang) Implemented #'inh::fun lfun closures (b-010801-0).

07-Oct-2002 (Lars Duening)  (3.3.277)
  - (comm.c, main.c, efuns.c) Removed compilation problems with BeOS.
  - (prolang.y) In struct literals, a trailing ',' is now allowed
       (suggested by Zonk).
  - (prolang.y) Oh My Ghod. The range index [..<expr0>] created faulty
       bytecode, maybe even clobbered random memory, if the expression
       was anything complicated, like 'm++' or 'm = 4'. This bug
       was caused by uninitialized the LPC parser not initializing
       the internal return value from parsing <expr0>, so the bug
       didn't manifest itself every time (reported by Zonk).

06-Oct-2002 (Lars Duening)  (3.3.276)
  - (prolang.y, interpret.c, efuns.c, sprintf.c, gcollect.c, exec.h)
       structs now carry an identification string internally, which is
       displayed in sprintf() and can be retrieved using get_type_info().

06-Oct-2002 (Lars Duening)  (3.3.275)
  - (prolang.y) New inlines: found a way to implement the old (: expr; :)