@@ -59,7 +59,7 @@ REPLACEMENT
                  */
                 else if (environment(from))
                 {
-                    if (from->can_put_and_get() || !from)
+                    if (!from->can_put_and_get() || !from)
                         return 3;
                 }
             }
