@@ -20,12 +20,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 280)
-(Parent-Version lpmud 3-3 279)
-(Version-Log "Struct corrections.")
+(Project-Version lpmud 3-3 281)
+(Parent-Version lpmud 3-3 280)
+(Version-Log "opcdump still used old-style strings.")
 (New-Version-Log
 "")
-(Checkin-Time "Wed, 09 Oct 2002 11:36:09 -0600")
+(Checkin-Time "Wed, 09 Oct 2002 23:20:32 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -61,7 +61,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.48 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.343 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.344 644))
   (HISTORY (lpmud/f/49_HISTORY 1.278 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.17 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -115,7 +115,7 @@
   (src/access_check.c (lpmud/d/14_access_che 1.15.1.3 644))
   (src/alloca.c (lpmud/d/13_alloca.c 1.10 644))
   (src/actions.h (lpmud/d/11_actions.h 1.6.1.7 644))
-  (src/actions.c (lpmud/d/12_actions.c 1.15.1.36 644))
+  (src/actions.c (lpmud/d/12_actions.c 1.15.1.37 644))
   (src/array.h (lpmud/f/47_array.h 1.18.1.21 644))
   (src/array.c (lpmud/d/12_array.c 1.46.1.46 644))
   (src/backend.h (lpmud/f/46_backend.h 1.20.1.7 644))
@@ -147,8 +147,8 @@
   (src/heartbeat.h (lpmud/m/41_heartbeat. 1.6.1.4 644))
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.7 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.2 644))
-  (src/interpret.h (lpmud/b/13_interpret. 1.33.1.31 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.51 644))
+  (src/interpret.h (lpmud/b/13_interpret. 1.33.1.32 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.52 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.28 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.11 644))
@@ -216,7 +216,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.13 644))
   (src/port.c (lpmud/39_port.c 1.17.1.7 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.16 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.60 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.61 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.1 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
@@ -236,7 +236,7 @@
   (src/strfuns.c (lpmud/c/0_strfuns.c 1.9.1.10 644))
   (src/svalue.h (lpmud/f/39_datatypes. 1.34.1.21 644))
   (src/swap.h (lpmud/f/14_swap.h 1.7.1.3 644))
-  (src/swap.c (lpmud/25_swap.c 1.36.1.35 644))
+  (src/swap.c (lpmud/25_swap.c 1.36.1.36 644))
   (src/switch.h (lpmud/24_switch.h 1.9 644))
   (src/sysmalloc.c (lpmud/23_sysmalloc. 1.1 644))
   (src/telnet.h (lpmud/22_telnet.h 1.5.1.2 644))
@@ -1147,7 +1147,7 @@
   (doc/efun/to_struct (lpmud/a/b/17_to_struct 1.1 644))
   (doc/efun/trace (lpmud/q/50_trace 1.4.1.3 644))
   (doc/efun/traceprefix (lpmud/q/51_traceprefi 1.4.1.2 644))
-  (doc/efun/transfer (lpmud/r/0_transfer 1.6 644))
+  (doc/efun/transfer (lpmud/r/0_transfer 1.7 644))
   (doc/efun/transpose_array (lpmud/r/1_transpose_ 1.2.1.2 644))
   (doc/efun/trim (lpmud/d/29_trim 1.3 644))
   (doc/efun/terminal_colour (lpmud/g/6_terminal_c 1.9 644))
@@ -1619,11 +1619,11 @@
   (mud/lp-245/obj/torch.c (lpmud/y/10_torch.c 1.2 644))
   (mud/lp-245/obj/team.c (lpmud/y/11_team.c 1.2 644))
   (mud/lp-245/obj/stethoscope.c (lpmud/y/12_stethoscop 1.3 644))
-  (mud/lp-245/obj/spare_simul_efun.c (lpmud/y/13_spare_simu 1.10 644))
+  (mud/lp-245/obj/spare_simul_efun.c (lpmud/y/13_spare_simu 1.11 644))
   (mud/lp-245/obj/soul.c (lpmud/y/14_soul.c 1.2 644))
   (mud/lp-245/obj/soft_drink.c (lpmud/y/15_soft_drink 1.3 644))
   (mud/lp-245/obj/sing.c (lpmud/y/16_sing.c 1.2 644))
-  (mud/lp-245/obj/simul_efun.c (lpmud/y/17_simul_efun 1.13 644))
+  (mud/lp-245/obj/simul_efun.c (lpmud/y/17_simul_efun 1.14 644))
   (mud/lp-245/obj/shut.c (lpmud/y/18_shut.c 1.2 644))
   (mud/lp-245/obj/shout_curse.c (lpmud/y/19_shout_curs 1.2 644))
   (mud/lp-245/obj/safe.c (lpmud/y/20_safe.c 1.3 644))
