@@ -198,7 +198,7 @@ extern svalue_t *f_traceprefix(svalue_t *sp);
 extern string_t *add_slash (const string_t *str);
 
 #ifdef OPCPROF
-extern Bool opcdump(char *fname);
+extern Bool opcdump(string_t *fname);
 #endif
 
 #ifdef TRACE_CODE
